syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/steve-mir/diivix_backend/pb";

message LocationUser {
    string address = 1;
    string city = 2;
    string postalCode = 3;
    string state = 4;
    string country = 5;
    string lga = 6;
  }

message ChurchUser {
    string uid = 1;
    int32 id = 2;
    string email = 3;
    string username = 4;
    string phone = 5;
    int32 denomination_id = 6;
    string name = 7;
    LocationUser location = 8;
    string image_url = 9;
    int64 following_count = 10;
    int64 follower_count = 11;
    int64 membership_count = 12;
    bool is_verified = 13;
    int64 post_count = 14;
    string about = 15;
    string website = 16;
    string header_image_url = 17;
    google.protobuf.Timestamp created_at = 18;
    string account_name = 19;
    string account_number = 20;
    string bank_name = 21;
}

message PostUser {
    string uid = 1;
    string username = 2;
    string email = 3;
    string phone = 4;
    string first_name = 5;
    string last_name = 6;
    string image_url = 7;
    google.protobuf.Timestamp created_at = 8;
    bool is_verified = 9;
    int32 following_count = 10;
    int32 follower_count = 11;
    string website = 12;
    string about = 13;
    int32 post_count = 14;
    string header_image_url = 15;
    string account_name = 16;
    string account_number = 17;
    string bank_name = 18;
}

message UserProfileRequest {
    string identifier = 1;
    // oneof identifier {
    //     string uid = 1;
    //     string username = 2;
    // }
}

message UserProfileResponse {
    optional PostUser user = 1;
    optional ChurchUser church = 2;
    bool is_following = 3;
    bool is_followed = 4;
    bool is_member = 5;
    bool is_church = 6;
}